added a style file

--- a/pages/user_profile.html
+++ b/pages/user_profile.html
@@ -68,5 +68,33 @@
         </div>
       </div>
     </nav>
+
+    <div id="contact-container">
+      <!-- Profile img and name -->
+      <section id="profile">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/8847/8847419.png"
+          class="img-thumbnail"
+          alt="profile-img"
+        />
+        <p>Tommy Test</p>
+      </section>
+
+      <!-- Contact info and edit button -->
+      <section>
+        <label for="">
+          <input type="text" />
+        </label>
+        <label>
+          <input type="text" />
+        </label>
+        <label>
+          <input type="text" />
+        </label>
+        <button type="button" class="btn btn-dark">Edit</button>
+      </section>
+    </div>
+
+    <div id="last-viewed-container"></div>
   </body>
 </html>
