added profile info

--- a/pages/user_profile.html
+++ b/pages/user_profile.html
@@ -82,14 +82,16 @@
 
       <!-- Contact info and edit button -->
       <section>
-        <label for="">
-          <input type="text" />
+        <label for="email"
+          >Email Address:
+          <input type="email" id="email" placeholder="test@example.com" />
         </label>
-        <label>
-          <input type="text" />
+        <label for="phone-number"
+          >Phone Number:
+          <input type="number" id="phone-number" placeholder="(303) 555-5555" />
         </label>
-        <label>
-          <input type="text" />
+        <label for="cc">
+          <input id="cc" type="number" placeholder="**** 4242" />
         </label>
         <button type="button" class="btn btn-dark">Edit</button>
       </section>
