--- a/pages/admin.html
+++ b/pages/admin.html
@@ -42,7 +42,7 @@
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./user.html">Admin</a>
+            <a class="nav-link active" href="./admin.html">Admin</a>
           </li>
         </ul>
 
@@ -68,5 +68,32 @@
         </div>
       </div>
     </nav>
+
+    <!-- Admin container -->
+    <div class="container-fluid">
+      <div
+        class="container-lg d-flex flex-row justify-content-center mt-5 mb-5"
+      >
+        <section
+          class="container-md m-2 p-5 d-flex flex-column flex-wrap align-items-center justify-content-between border rounded-5 text-center"
+        >
+          <h3>Active Reservations</h3>
+          <p class="fs-4">45</p>
+        </section>
+        <section
+          class="container-md m-2 p-5 d-flex flex-column flex-wrap align-items-center justify-content-between border rounded-5 text-center"
+        >
+          <h3>Top 5 Cuisines</h3>
+          <p class="fs-5">Italian, Japanese, American, Greek, Vietnamese</p>
+        </section>
+        <section
+          class="container-md m-2 p-5 d-flex flex-column flex-wrap align-items-center justify-content-between border rounded-5 text-center"
+        >
+          <h3>Places Visited Last Month</h3>
+          <p class="fs-4">505</p>
+        </section>
+      </div>
+      <div class="container-lg"></div>
+    </div>
   </body>
 </html>
