added table and pagination to admin page

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -93,7 +93,93 @@
           <p class="fs-4">505</p>
         </section>
       </div>
-      <div class="container-lg"></div>
+
+      <div class="container-lg">
+        <table
+          class="table table-primary table-striped table-hover caption-top"
+        >
+          <caption class="fs-2">
+            List of Places
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Restaurant Name</th>
+              <th scope="col">Location</th>
+              <th scope="col">Reviews</th>
+              <th scope="col">Rating</th>
+            </tr>
+          </thead>
+          <tbody class="table-group-divider">
+            <tr>
+              <th scope="row">1</th>
+              <td>Spaghetti Only</td>
+              <td>Otto</td>
+              <td>15</td>
+              <td>4/5</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Pizza Yum</td>
+              <td>Thornton</td>
+              <td>300</td>
+              <td>4.5/5</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Cart Choice</td>
+              <td>Thornton</td>
+              <td>1,322</td>
+              <td>4.5/5</td>
+            </tr>
+            <tr>
+              <th scope="row">4</th>
+              <td>More Food</td>
+              <td>Thornton</td>
+              <td>233</td>
+              <td>5/5</td>
+            </tr>
+            <tr>
+              <th scope="row">5</th>
+              <td>Chef's Backyard</td>
+              <td>Thornton</td>
+              <td>423</td>
+              <td>5/5</td>
+            </tr>
+            <tr>
+              <th scope="row">6</th>
+              <td>MacFunalds</td>
+              <td>Thornton</td>
+              <td>1</td>
+              <td>1/5</td>
+            </tr>
+            <tr>
+              <th scope="row">7</th>
+              <td>Larry's Kitchen</td>
+              <td>Thornton</td>
+              <td>555</td>
+              <td>3.5/5</td>
+            </tr>
+          </tbody>
+        </table>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination justify-content-center">
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </body>
 </html>
